<?xml version="1.0"?>
<package>
  <name>diabolo_state_estimation</name>
  <version>0.0.4</version>
  <description>diabolo_state_estimation package</description>

  <maintainer email="takayuki5168@gmail.com">Takayuki Murooka</maintainer>
  <author email="takayuki5168@gmail.com">Takayuki Murooka</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
