<?xml version="1.0"?>
<package>
  <name>diabolo_state_estimation</name>
  <version>0.0.4</version>
  <description>diabolo_state_estimation package</description>

  <maintainer email="takayuki5168@gmail.com">Takayuki Murooka</maintainer>
  <author email="takayuki5168@gmail.com">Takayuki Murooka</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  
  <export>
  </export>
</package>
